[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-flywheel"
version = "0.5.0"
description = "Lightweight beads task-graph MCP server for Hermes Agent — reverse-engineered from the Agentic Coding Flywheel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "halaprix" },
]
keywords = ["hermes-agent", "mcp", "beads", "flywheel", "task-tracking", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/halaprix/hermes-flywheel"
Repository = "https://github.com/halaprix/hermes-flywheel.git"
Issues = "https://github.com/halaprix/hermes-flywheel/issues"

[project.scripts]
hermes-flywheel = "hermes_flywheel.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["hermes_flywheel"]
